Problem description: Commit cf7bd4852 (which is now in 3-6) introduced a regression Steps to reproduce: 1. Open new writer document. 2. Create at least 2 pages. 3. Zoom out to 20%. Current behavior: grey rectangles get painted over the pages Expected behavior: shadows between pages looks normal Please see also the screenshots before and after the mentioned commit.
Created attachment 65495 [details] comparison - before and after
Thanks, confirmed, I'll have a look.
Miklos Vajna committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=c5b9c197d70a0fb7d75bcedf2d70e6320175e846 fdo#53439 SwPageFrm::PaintBorderAndShadow fix painting at small zoom
Ivan, Please double-check that it fixes the problem. If it does, it would be great if you could cherry-pick that fix to -3-6 as well. Thanks!
Miklos Vajna committed a patch related to this issue. It has been pushed to "libreoffice-3-6": http://cgit.freedesktop.org/libreoffice/core/commit/?id=93e819418070deb2750a918a1c3ea52376558d21&g=libreoffice-3-6 fdo#53439 SwPageFrm::PaintBorderAndShadow fix painting at small zoom It will be available in LibreOffice 3.6.1.
Yep, it works! I have pushed it to 3-6, thanks! :) However there is also problem with the page preview mode (which seems to paint shadows twice (wtf?) ) but it was already quite buggy, so... Hmm, dunno.