fdo#53439 SwPageFrm::PaintBorderAndShadow fix painting at small zoom

Change-Id: I235895caaf95225148e61d96f4c3b14bf9f5542e